--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,8 +59,8 @@ dependencies {
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
-    implementation 'androidx.activity:activity-compose:1.4.0-alpha02'
-    implementation("androidx.navigation:navigation-compose:2.4.0-alpha09")
+    implementation 'androidx.activity:activity-compose:1.4.0-beta01'
+    implementation("androidx.navigation:navigation-compose:2.4.0-alpha10")
     implementation("com.google.accompanist:accompanist-insets:$accompanist_version")
     implementation("com.google.accompanist:accompanist-systemuicontroller:$accompanist_version")
     implementation("com.google.accompanist:accompanist-pager:$accompanist_version")
@@ -71,15 +71,16 @@ dependencies {
     implementation("androidx.room:room-ktx:$room_version")
     implementation "io.github.vanpra.compose-material-dialogs:core:$dialogs_version"
     implementation "io.github.vanpra.compose-material-dialogs:datetime:$dialogs_version"
-    implementation 'androidx.work:work-runtime-ktx:2.5.0'
-    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.0.9'
+    implementation 'androidx.work:work-runtime-ktx:2.6.0'
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
 
     annotationProcessor "androidx.room:room-compiler:$room_version"
 
     kapt("androidx.room:room-compiler:$room_version")
 
     testImplementation("androidx.room:room-testing:$room_version")
-    testImplementation 'junit:junit:4.+'
+    testImplementation('androidx.test:core:1.4.0')
+    testImplementation 'junit:junit:4.13.2'
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
